--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main-border">
         <section>
             <img src="/images/temp-logo.png" alt="main logo" />
-            <h1>A fine quote about tech.</h1>
+            <h1>A fine quote about tech!!</h1>
             <img src="/images/temp-main-image.png" alt="sale information" />
             <article>
                 <img src="/images/icons/1.png" alt="" />
